# nm_objdump

./: CMakeLists.txt  Makefile  README.md
commun/: my_malloc.c
commun/archive/: ar.c
commun/elf/: commun.c  elf32.c  elf64.c
commun/errors/: throw.c
commun/file/: utils.c
include/: archive.h  errors.h  file_utils.h  flags.h  my_elf.h  my_malloc.h  nm.h  objdump.h
nm/: Makefile
nm/source/: compare.c  decode_symbol_one.c  decode_symbol_two.c  errors.c  get_symbol.c  main.c  nm.c
objdump/: Makefile
objdump/source/: flag_objdump.c  main.c  objdump.c  print_section.c
tests/: Makefile  main_test.c  start_to_nm_with_docker.sh  start_to_objdump_with_docker.sh  to_nm_launcher.sh  to_objdump_launcher.sh
tests/binary/: mysh  test_archive_bad_format1  test_archive_bad_format2  test_archive_with_bad_obj  test_corrupted_archive  test_empty_symbol_table  test_invalid_class  test_invalid_data  test_invalid_version  test_malformed_archive  test_no_str_tab_archive  test_no_symbol_table  test_null_shnum  test_null_shoff  test_too_high_offset  test_toobig_shnum  test_toobig_shoff  test_tooshort_shnum  test_tooshort_shoff  test_unknow_sh_link
tests/objdump_test/: bad_ar1  bad_ar_obj  empty_symbol_table  invalid_data  invalid_version  nm_32bit_ar  nm_32bit_corewar  nm_32bit_libmalloc_so  nm_a_lot_of_32bit_ar  nm_a_lot_of_64bit_ar  nm_a_lot_of_64bit_obj  no_arg  null_shnum  too_big_shnum  too_high_offset  with_directory
tests/to_tests_nm/: bad_ar2  corrupted_ar  empty_file  file_not_exist  invalid_class  less_than_four_bytes  malformed_ar  nm_32bit_get_next_line_obj  (+15 more)
(+4 files in other folders)
